# flowi_core

./: Cargo.toml  README.md  build.rs
api/: application_settings.def  image.def  input.def  io.def
c_api/flowi_core/: flowi_core.h
langs/c_cpp/include/flowi/: application.h  application_settings.h  button.h  button.inl  context.h  debug.h  error.h  font.h  font.inl  image.h  image.inl  input.h  input.inl  io.h  io.inl  item.h  item.inl  layout.h  layout.inl  math_data.h  menu.h  menu.inl  painter.h  painter.inl  render_commands.h  shader.h  style.h  style.inl  text.h  text.inl  ui.h  ui.inl  window.h  window.inl
src/: image_api.rs  image_loader.rs  imgui.rs  internal_error.rs  internal_image.rs  io_handler.rs  key.rs  lib.rs  manual.rs  tests.rs
src/c_cpp/: imgui_wrap.cpp  internal.h  linear_allocator.c  string_allocator.c
tools/api_gen/: Cargo.toml
tools/api_gen/src/: api.pest  api_parser.rs  c_gen.rs  main.rs  rust_gen.rs
tools/api_gen/templates/: c_enum.tera  c_handle_type.tera  c_header.tera  c_struct.tera  macros.tera
