[package]
name = "flowi_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.23.0"
thiserror = "1.0"
bitflags = "2.0.0-rc.1"
notify = "5.1.0"
png = "0.17.7"
sha2 = "0.10.6"
base64ct = { version = "1.6.0", features = ["alloc"] }

[profile.dev.package.png]
opt-level = 3

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[workspace]
exclude = [
    "tools/api_gen", 
]


