[package]
name = "flowi_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.23.0"
thiserror = "1.0"
bitflags = "2.0.0-rc.1"
notify = "5.1.0"
zune-png = "0.2"
zune-jpeg = "0.3"
sha2 = "0.10.6"
bytemuck = "1.14.0"
fileorama = { path = "../fileorama" }
base64ct = { version = "1.6.0", features = ["alloc"] }

[profile.dev.package.zune-png]
opt-level = 3

[profile.dev.package.zune-jpeg]
opt-level = 3

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[features]
default = ["static"]
static = []

[workspace]
exclude = [
    "tools/api_gen", 
]

